# mm-web-py

./: README.md  pyproject.toml
examples/mm-fastapi/: advanced_example.py  basic_example.py  client_example.py  server_example.py  shared_models.py  test_integration.py
examples/mm-flask/: basic_example.py
examples/mm_django/: basic_example.py
src/mm_core/: __init__.py  client.py  types.py
src/mm_django/: __init__.py  decorators.py  middleware.py  utils.py
src/mm_fastapi/: README.md  __init__.py  decorators.py  middleware.py  utils.py
src/mm_flask/: README.md  __init__.py  decorators.py  middleware.py  utils.py
tests/: test_mm_django.py  test_mm_fastapi.py  test_mm_flask.py
