[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mm-web-py"
version = "0.1.0"
description = "MetaMessage protocol integrations for Python web frameworks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mm-web-py contributors"}
]
keywords = ["fastapi", "flask", "metamessage", "mm", "protocol", "serialization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "metamessage>=0.2.2",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.128.8",
    "starlette>=0.27.0",
]
flask = [
    "flask>=2.0.0",
]
django = [
    "django>=3.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "fastapi>=0.128.8",
    "starlette>=0.27.0",
    "flask>=2.0.0",
    "django>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/metamessage/mm-web-py"
Documentation = "https://github.com/metamessage/mm-web-py#readme"
Repository = "https://github.com/metamessage/mm-web-py"
Issues = "https://github.com/metamessage/mm-web-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mm_core", "src/mm_fastapi", "src/mm_flask", "src/mm_django"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
